package glyph;
import window.Window;
import java.awt.Point;

public class Character extends Glyph {

    private char character;

    public Character(char character) {
        getBounds().setPointDimensions(0, 0);
        getBounds().getUpperLeft().setLocation(new Point(0, 0));
        this.character = character;

    }


    public void draw(Window window) {
        window.drawCharacter(this.character, getBounds().getUpperLeft().x,getBounds().getUpperLeft().y);
    }


    public void setSize(Window window) {
        getBounds().setPointDimensions(window.charWidth(this.character), window.charHeight(this.character) );

    }


}